@@ -44,7 +44,7 @@ extern void simplified_command_loop (char *(*read_input_func) (char *),
 extern int quit_confirm (void);
 extern void quit_force (char *, int);
 extern void quit_command (char *, int);
-extern int quit_cover (PTR);
+extern int quit_cover (void *);
 extern void execute_command (char *, int);
 
 /* This function returns a pointer to the string that is used
